release v0.2.0
